// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Confirm Dialog Tests Confirm Dialog Render Test 1`] = `
<ConfirmDialog>
  <Dialog
    actions={
      {
        "end": [],
      }
    }
    caption={
      <g>
        <Icon
          disabled={false}
          src={278}
        />
        <Label>
          Confirm
        </Label>
      </g>
    }
    className="msg confirmDialog"
    container={
      <body
        theme="dark"
      />
    }
    content={
      <Container
        orientation="column"
      >
        
        <Container
          className="description"
          orientation="column"
        />
      </Container>
    }
    onClose={[Function]}
  >
    <Portal
      container={
        <body
          theme="dark"
        />
      }
      onClose={[Function]}
      onOpen={[Function]}
    />
  </Dialog>
</ConfirmDialog>
`;

exports[`Confirm Dialog Tests Show Dialog with React Element 1`] = `
<div
  class="msg portal"
  style="--background-opacity: 0.5;"
>
  <div
    class="msg dialog visible confirmDialog"
  >
    <div
      class="title verticalCenterContent"
    >
      <div
        class="msg icon codicon codicon-question"
      />
      <label
        class="msg label"
        data-tooltip="expand"
      >
        Confirm you are a spy!
      </label>
      <div
        class="msg button imageOnly"
        id="closeButton"
        role="button"
        tabindex="0"
      >
        <div
          class="msg icon"
          style="mask-image: url("close2.svg"); mask-size: 100% 100%; mask-composite: subtract;"
        />
      </div>
    </div>
    <div
      class="content fixedScrollbar"
    >
      <div
        class="msg container fixedScrollbar"
        style="flex-direction: column;"
      >
        <label
          class="msg label"
          data-tooltip="expand"
          id="dialogMessage"
        >
          <label
            class="msg label"
            data-tooltip="expand"
          >
            Time to say goodbye
          </label>
        </label>
        <div
          class="msg container fixedScrollbar description"
          style="flex-direction: column;"
        />
      </div>
    </div>
    <div
      class="footer verticalCenterContent"
    >
      <div
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <div
          caption="Yes, you got me"
          class="msg button"
          id="accept"
          role="button"
          tabindex="0"
        >
          Yes, you got me
        </div>
        <div
          caption="No, I'm not a spy"
          class="msg button"
          id="refuse"
          role="button"
          tabindex="0"
        >
          No, I'm not a spy
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Confirm Dialog Tests Show Dialog with simple and no message 1`] = `
<div
  class="msg portal"
  style="--background-opacity: 0.5;"
>
  <div
    class="msg dialog visible confirmDialog"
  >
    <div
      class="title verticalCenterContent"
    >
      <div
        class="msg icon codicon codicon-question"
      />
      <label
        class="msg label"
        data-tooltip="expand"
      >
        Confirm you are a spy!
      </label>
      <div
        class="msg button imageOnly"
        id="closeButton"
        role="button"
        tabindex="0"
      >
        <div
          class="msg icon"
          style="mask-image: url("close2.svg"); mask-size: 100% 100%; mask-composite: subtract;"
        />
      </div>
    </div>
    <div
      class="content fixedScrollbar"
    >
      <div
        class="msg container fixedScrollbar"
        style="flex-direction: column;"
      >
        <label
          class="msg label"
          data-tooltip="expand"
          id="dialogMessage"
        >
          Answer The Question
        </label>
        <div
          class="msg container fixedScrollbar description"
          style="flex-direction: column;"
        />
      </div>
    </div>
    <div
      class="footer verticalCenterContent"
    >
      <div
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <div
          caption="Yes, you got me"
          class="msg button"
          id="accept"
          role="button"
          tabindex="0"
        >
          Yes, you got me
        </div>
        <div
          caption="No, I'm not a spy"
          class="msg button"
          id="refuse"
          role="button"
          tabindex="0"
        >
          No, I'm not a spy
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Confirm Dialog Tests Show Dialog with simple and no message 2`] = `
<div
  class="msg portal"
  style="--background-opacity: 0.5;"
>
  <div
    class="msg dialog visible confirmDialog"
  >
    <div
      class="title verticalCenterContent"
    >
      <div
        class="msg icon codicon codicon-question"
      />
      <label
        class="msg label"
        data-tooltip="expand"
      >
        Resistance is futile
      </label>
      <div
        class="msg button imageOnly"
        id="closeButton"
        role="button"
        tabindex="0"
      >
        <div
          class="msg icon"
          style="mask-image: url("close2.svg"); mask-size: 100% 100%; mask-composite: subtract;"
        />
      </div>
    </div>
    <div
      class="content fixedScrollbar"
    >
      <div
        class="msg container fixedScrollbar"
        style="flex-direction: column;"
      >
        
        <div
          class="msg container fixedScrollbar description"
          style="flex-direction: column;"
        />
      </div>
    </div>
    <div
      class="footer verticalCenterContent"
    >
      <div
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <div
          caption="Yes, you got me"
          class="msg button"
          id="accept"
          role="button"
          tabindex="0"
        >
          Yes, you got me
        </div>
        <div
          caption="No, I'm not a spy"
          class="msg button"
          id="refuse"
          role="button"
          tabindex="0"
        >
          No, I'm not a spy
        </div>
      </div>
    </div>
  </div>
</div>
`;
